--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         <div id='quality'>
            <p id="idade"> </p>
-           <p> ♥ Menina gamer rara</p>
+           <p> ♥ Menina gamer raras</p>
            <p> ♥ Procrastinadora profissional</p>
            <p> ♥ Aspirante a dev</p>
 
