--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
             <img src="eu.png" id="foto">
             
             <img src="logo.jpg">
-            <h1 class='um'> Web Developer <i class="fas fa-laptop-code"></i></h1>
+            <h1 class='um'> Mobile Developer <i class="fas fa-laptop-code"></i></h1>
             <h3> marialuizacaarvalho@gmail.com</h3>
         </div>
         <div id='quality'>
            <p id="idade"> </p>
-           <p> ♥ Menina gamer raras</p>
+           <p> ♥ Estudando desenvolvimento iOS</p>
            <p> ♥ Procrastinadora profissional</p>
-           <p> ♥ Aspirante a dev</p>
+           <p> ♥ Amante de dogos</p>
 
             
         </div>
