--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         <div id='quality'>
            <p id="idade"> </p>
-           <p> ♥ Estudando desenvolvimento iOS</p>
+           <p> ♥ Atualmente desenvolvendo para iOS</p>
            <p> ♥ Procrastinadora profissional</p>
            <p> ♥ Amante de dogos</p>
 
